HTML inputs edited

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <h1>Transform Text to Number</h1>
     <input class="inputText" type="text" placeholder="Enter Your Text" />
     <button type="submit" class="convert__btn">Convert</button>
-    <p class="show__result"></p>
+    <span>Text to Number :</span>
+    <p class="result num__result"></p>
+    <span>Sum of Numbers :</span>
+    <p class="result sum-of-num__result"></p>
 
     <script src="./alphabet.js"></script>
   </body>
